[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

# Network
pnet = "0.34"

# Export
csv = "1.2"
quick-xml = "0.30"

# Web (if we add actual HTTP server)
# warp = "0.3"
# OR
# actix-web = "4.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
