[package]
name = "port-zilla"
version = "1.0.0"
edition = "2021"
authors = ["CyberZilla Systems <cyberzilla.systems@gmail.com>"]
description = "Enterprise-grade port scanner and vulnerability assessment tool"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FJ-cyberzilla/Port-ZiLLA"
keywords = ["security", "port-scanner", "vulnerability", "pentesting"]
categories = ["command-line-utilities", "security"]

[features]
default = ["cli", "database", "export", "network"]
cli = ["clap", "colored", "indicatif", "dialoguer"]
database = ["sqlx", "rusqlite"]
export = ["serde_json", "csv", "quick-xml"]
network = ["pnet"]
full = ["cli", "database", "export", "network"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# CLI dependencies - FIXED: Made clap optional for the cli feature
clap = { version = "4.0", features = ["derive"], optional = true }
colored = { version = "2.0", optional = true }
indicatif = { version = "0.17", optional = true }
dialoguer = { version = "0.10", optional = true }

# Database dependencies
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
rusqlite = "0.29"

# Network dependencies
pnet = { version = "0.34", optional = true }

# Export dependencies
csv = { version = "1.2", optional = true }
quick-xml = { version = "0.30", optional = true }

# Utility dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
rayon = "1.7"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "portzilla"
path = "src/main.rs"

[lib]
name = "portzilla"
path = "src/lib.rs"
