[package]
name = "port-zilla"
version = "1.0.0"
edition = "2021"
authors = ["CyberZilla Systems <cyberzilla.systems@gmail.com>"]
description = "Enterprise-grade port scanner and vulnerability assessment tool"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FJ-cyberzilla/Port-ZiLLA"
keywords = ["security", "port-scanner", "vulnerability", "pentesting"]
categories = ["command-line-utilities", "security"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.10"

# Database dependencies
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
rusqlite = "0.29"

# Network dependencies
pnet = "0.34"

# Export dependencies
csv = "1.2"
quick-xml = "0.30"

# Utility dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
rayon = "1.7"

[dev-dependencies]
rstest = "0.18"
tempfile = "3.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "portzilla"
path = "src/main.rs"

[lib]
name = "portzilla"
path = "src/lib.rs"
